# fastjsonrpc

./: .gitignore  pyproject.toml  requirements.txt  setup.py
tests/: dummyserver.py  helpers.py  test_client.py  test_jsonrpc.py  test_netstringclient.py  test_netstringserver.py  test_server.py
