[tool.poetry]
name = "fastjsonrpc"
version = "0.4.0"
description = "A library for writing asynchronous JSON-RPC servers and clients in Python, using Twisted"
authors = ["Daniel Gonzalez <gonvaled@gonvaled.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Twisted = "^19.7"
pyOpenSSL = "^19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
